src/test/deca/context/invalid/sansObjet/BadDecl.deca
{
 untruc a;
 a = 2020;   
}